--- a/src/assets/styles/component/_buttons.scss
+++ b/src/assets/styles/component/_buttons.scss
@@ -57,11 +57,6 @@
 	@each $name, $size in $btn-height-sizes {
 		&#{"" + $name} {
 			height: $size;
-
-			// 
-			@if $size == "xl" {
-				border: 1px solid red;
-			}
 		}
 	}
 }
@@ -127,3 +122,47 @@
 		transition: all 0.3s;
 	}
 }
+
+// button group
+.btn-group {
+	display: flex;
+	flex: 1 0 auto;
+	gap: 0.8rem;
+	>.btn {
+		width: 100%;
+	}
+}
+.btn-sticky {
+	// position: fixed;
+	// left: 0;
+	// right: 0;
+	// bottom: 0;
+	display: flex;
+	flex: 1 0 auto;
+	border-top: 1px solid var(--gray-5);
+	>.btn {
+		width: 100%;
+		border:0;
+		border-radius: 0;
+	}
+}
+.btn-toggle {
+	display: flex;
+	flex: 1 1 0;
+
+	.btn {
+		width: 100%;
+	}
+	.btn + .btn {
+		margin-left: -1px;
+	}
+	>.btn:nth-child(1) {
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+	>.btn:nth-child(2) {
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
+	}
+}
+
